CPT-76 #added welcome Message
